unpackaged/objects/BuyProductJunction__c.object
<CustomObject>
    <fields>
        <fullName>Buy__c</fullName>
        <label>Buy</label>
        <referenceTo>Buy__c</referenceTo>
        <relationshipLabel>Buy Product Junctions</relationshipLabel>
        <relationshipName>Buy_Product_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Buy Product Junctions</relationshipLabel>
        <relationshipName>Buy_Product_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Buy Product Junction</label>
    <nameField>
        <displayFormat>BP-{0000000000}</displayFormat>
        <label>ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buy Product Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>